--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "create-react-app-antd",
+  "homepage": "http://tomsoverbaghdad.github.io/i-work-out",
+  "name": "i-work-out",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@craco/craco": "^5.6.4",
     "@testing-library/jest-dom": "^5.9.0",
@@ -16,7 +17,9 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test"
+    "test": "craco test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
   }
 }
